--- a/index.html
+++ b/index.html
@@ -5,8 +5,112 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/index-logo.svg" width="#" height="#" alt="Логотип 'nёrds'">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <a href="#" class="basket">Корзина</a>
+      </nav>
+    </header>
+    <main class="container">
+      <section class="service">
+        <h2 class="visually-hidden">Оказание услуг</h2>
+        <ul class="service-list">
+          <li class="web-sites">
+            <img src="#" width="#" height="#" alt="Веб-сайты">
+            <h3>Веб-сайты</h3>
+            <b>Мир никогда не будет прежним после того как увидит ваш сайт!</b>
+            <a class="button" href="#">Заказать</a>
+          </li>
+          <li class="apps">
+            <img src="#" width="#" height="#" alt="Приложения">
+            <h3>Приложения</h3>
+            <b>Покорите топ-10 приложений в AppStore и Google Play</b>
+            <a class="button" href="#">Заказать</a>
+          </li>
+          <li class="presentations">
+            <img src="#" width="#" height="#" alt="Презентации">
+            <h3>Презентации</h3>
+            <b>Вы даже не подозреваете, насколько вы изумительны!</b>
+            <a class="button" href="#">Заказать</a>
+          </li>
+        </ul>
+      </section>
+      <section class="features">
+        <div class="feature-description">
+          <b class="feature-title">Мы - маленькая, но гордая дизайн-студия из Краснодара.</b>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+          превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <b class="feature-list-title">Выполняем заказы на разработку:</b>
+            <ul class="feature-list">
+              <li class="feature-item">Веб-сайтов любой сложности</li>
+              <li class="feature-item">Мобильных приложений для iOS и Android</li>
+              <li class="feature-item">Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+        </div>
+        <div class="feature-statistic">
+          <img src="#" width="#" height="#" alt="Логотип 'nёrds'">
+          <b>С 2004 года любим точность во всем:</b>
+          <table>
+            <tr>
+              <td>146%</td>
+              <td>100%</td>
+              <td>50%</td>
+            </tr>
+            <tr>
+              <td>Уровень самоотдачи</td>
+              <td>Соблюдение сроков</td>
+              <td>Минимальная предоплата</td>
+            </tr>
+          </table>
+        </div>
+      </section>
+      <section class="portfolio">
+        <a class="portfolio-logo">
+          <img src="#" width="#" height="#" alt="Логотип 'htmlacademy'">
+        </a>
+        <a class="portfolio-logo">
+          <img src="#" width="#" height="#" alt="Логотип 'барбершопа «Бородинский»'">
+        </a>
+        <a class="portfolio-logo">
+          <img src="#" width="#" height="#" alt="Логотип 'pink'">
+        </a>
+        <a class="portfolio-logo">
+          <img src="#" width="#" height="#" alt="Логотип 'mishka'">
+        </a>
+      </section>
+    </main>
+    <footer class="footer">
+      <section class="footer-map">
+        <img src="#" alt="Карта">
+        <div class="map-mark">
+          <img src="#" width="#" height="#" alt="Логотип 'nёrds'">
+        </div>
+        <div class="footer-contacts">
+          <h3 class="contacts-title">Nёrds design studio</h3>
+          <p class="contacts-adress">191186, г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <span class="contacts-phone">тел. <a href="tel:+78122757575">+7 (812)275-75-75</a></span>
+          <a class="button" href="#">Напишите нам</a>
+         </div>
+      </section>
+      <div class="footer-social">
+        <ul>
+          <li><a class="social-button" href="#">Вконтакте</a></li>
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+        </ul>
+        <div class="discount-wrapper">
+          <b class="discount-title">Давайте дружить, это выгодно!</b>
+          <b class="discount-description">Скидка 10% для друзей из социальных сетей.</b>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
