--- a/catalog.html
+++ b/catalog.html
@@ -8,8 +8,8 @@
   <body>
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
-          <img src="img/index-logo.svg" width="#" height="#" alt="Логотип 'nёrds'">
+        <a href="index.html" class="main-header-logo">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип 'nёrds'">
         </a>
         <ul class="site-navigation">
           <li><a href="#">Студия</a></li>
@@ -47,7 +47,7 @@
       <h2 class="visually-hidden">Список шаблонов</h2>
       <ul class="catalog-list">
         <li class="catalog-item">
-          <img  src="#" width="#" height="#" alt="Sedona">
+          <img  src="img/img-sedona.jpg" width="360" height="576" alt="Sedona">
           <div class="description-item">
             <h3>Sedona</h3>
             <p>Информационный сайт для туристов</p>
@@ -55,7 +55,7 @@
           </div>
         </li>
         <li class="catalog-item">
-          <img  src="#" width="#" height="#" alt="Pink">
+          <img  src="img/img-pink.jpg" width="360" height="576" alt="Pink">
           <div class="description-item">
             <h3>Pink App</h3>
             <p>Продуктовый лендинг приложения для iOS и Android</p>
@@ -63,7 +63,7 @@
           </div>
         </li>
         <li class="catalog-item">
-          <img  src="#" width="#" height="#" alt="Pink">
+          <img  src="img/img-barbershop.jpg" width="360" height="576" alt="Borodinski">
           <div class="description-item">
             <h3>Барбершоп "Borodinski"</h3>
             <p>......</p>
@@ -71,7 +71,7 @@
           </div>
         </li>
         <li class="catalog-item">
-          <img  src="#" width="#" height="#" alt="Pink">
+          <img  src="img/img-mishka.jpg" width="360" height="576" alt="Mishka">
           <div class="description-item">
             <h3>Mishka</h3>
             <p>.......</p>
@@ -79,15 +79,15 @@
           </div>
         </li>
         <li class="catalog-item">
-          <img  src="#" width="#" height="#" alt="Pink">
+          <img  src="img/img-aplus.jpg" width="360" height="576" alt="Aplus">
           <div class="description-item">
-            <h3>A+</h3>
+            <h3>Aplus</h3>
             <p>.........</p>
             <a class="button">9 9000 руб.</a>
           </div>
         </li>
         <li class="catalog-item">
-          <img  src="#" width="#" height="#" alt="Pink">
+          <img  src="img/img-kvast.jpg" width="360" height="576" alt="Kvast">
           <div class="description-item">
             <h3>Кваст</h3>
             <p>.........</p>
@@ -106,9 +106,9 @@
   </main>
   <footer class="footer">
     <section class="footer-map">
-      <img src="#" alt="Карта">
+      <img src="img/map.jpg" width="1440" height="416" alt="Карта">
       <div class="map-mark">
-        <img src="#" width="#" height="#" alt="Логотип 'nёrds'">
+        <img src="img/map-marker.png" width="231" height="190" alt="Логотип 'nёrds'">
       </div>
       <div class="footer-contacts">
         <h3 class="contacts-title">Nёrds design studio</h3>
