--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/index-logo.svg" width="#" height="#" alt="Логотип 'nёrds'">
+          <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип 'nerds'">
         </a>
         <ul class="site-navigation">
           <li><a href="#">Студия</a></li>
@@ -24,19 +24,19 @@
         <h2 class="visually-hidden">Оказание услуг</h2>
         <ul class="service-list">
           <li class="web-sites">
-            <img src="#" width="#" height="#" alt="Веб-сайты">
+            <img src="img/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
             <h3>Веб-сайты</h3>
             <b>Мир никогда не будет прежним после того как увидит ваш сайт!</b>
             <a class="button" href="#">Заказать</a>
           </li>
           <li class="apps">
-            <img src="#" width="#" height="#" alt="Приложения">
+            <img src="img/illustration-2.jpg" width="300" height="146" alt="Приложения">
             <h3>Приложения</h3>
             <b>Покорите топ-10 приложений в AppStore и Google Play</b>
             <a class="button" href="#">Заказать</a>
           </li>
           <li class="presentations">
-            <img src="#" width="#" height="#" alt="Презентации">
+            <img src="img/illustration-3.jpg" width="300" height="146" alt="Презентации">
             <h3>Презентации</h3>
             <b>Вы даже не подозреваете, насколько вы изумительны!</b>
             <a class="button" href="#">Заказать</a>
@@ -56,7 +56,7 @@
             </ul>
         </div>
         <div class="feature-statistic">
-          <img src="#" width="#" height="#" alt="Логотип 'nёrds'">
+          <img src="img/nerds-illustration.png" width="360" height="208" alt="Логотип 'nerds'">
           <b>С 2004 года любим точность во всем:</b>
           <table>
             <tr>
@@ -74,24 +74,24 @@
       </section>
       <section class="portfolio">
         <a class="portfolio-logo">
-          <img src="#" width="#" height="#" alt="Логотип 'htmlacademy'">
+          <img src="img/logo-htmlacademy.png" width="199" height="68" alt="Логотип 'htmlacademy'">
         </a>
         <a class="portfolio-logo">
-          <img src="#" width="#" height="#" alt="Логотип 'барбершопа «Бородинский»'">
+          <img src="img/logo-borodinski.png" width="209" height="90" alt="Логотип 'барбершопа «Бородинский»'">
         </a>
         <a class="portfolio-logo">
-          <img src="#" width="#" height="#" alt="Логотип 'pink'">
+          <img src="img/logo-pink.png" width="185" height="52" alt="Логотип 'pink'">
         </a>
         <a class="portfolio-logo">
-          <img src="#" width="#" height="#" alt="Логотип 'mishka'">
+          <img src="img/logo-mishka.png" width="173" height="84" alt="Логотип 'mishka'">
         </a>
       </section>
     </main>
     <footer class="footer">
       <section class="footer-map">
-        <img src="#" alt="Карта">
+        <img src="img/map.jpg" width="1440" height="416" alt="Карта">
         <div class="map-mark">
-          <img src="#" width="#" height="#" alt="Логотип 'nёrds'">
+          <img src="img/map-marker.png" width="231" height="190" alt="Логотип 'nёrds'">
         </div>
         <div class="footer-contacts">
           <h3 class="contacts-title">Nёrds design studio</h3>
