--- a/catalog.html
+++ b/catalog.html
@@ -23,25 +23,60 @@
     </header>
     <main class="container">
     <section class="templates-filter">
-      <div class="filter-grid">
-        <h2>Сетка:</h2>
+      <h2 class="visually-hidden">Фильтр товаров</h2>
+      <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+        <fieldset>
+          <legend>Сетка:</legend>
         <ul>
-          <li>Адаптивная</li>
-          <li>Фиксированная</li>
-          <li>Резиновая</li>
+          <li class="filter-grid">
+            <input class="visually-hidden filter-input filter-input-radio"
+             type="radio" name="grid-group" value="adaptive" id="filter-adaptive" checked>
+             <label for="filter-adaptive">Адаптивная</label>
+          </li>
+          <li class="filter-grid">
+            <input class="visually-hidden filter-input filter-input-radio"
+             type="radio" name="grid-group" value="fixed" id="filter-fixed">
+             <label for="filter-fixed">Фиксированная</label>
+          </li>
+          <li class="filter-grid">
+            <input class="visually-hidden filter-input filter-input-radio"
+             type="radio" name="grid-group" value="responsive" id="filter-responsive">
+             <label for="filter-responsive">Резиновая</label>
+          </li>
        </ul>
-     </div>
-      <div class="filter-features">
-        <h2>Особенности:</h2>
-        <ul>
-          <li>Слайдер</li>
-          <li>Блок преимуществ</li>
-          <li>Новости</li>
-          <li>Галерея</li>
-          <li>Корзина</li>
-        </ul>
-      </div>
-      <a class="button">Показать</a>
+      </fieldset>
+      <fieldset>
+        <legend>Особенности:</legend>
+      <ul>
+        <li class="filter-features">
+          <input class="vissually-hidden filter-input filter-input-checkbox"
+            type="checkbox" name="slider" id="filter-slider" checked>
+          <label for="filter-slider">Слайдер</label>
+        </li>
+        <li class="filter-features">
+          <input class="vissually-hidden filter-input filter-input-checkbox"
+            type="checkbox" name="privilege" id="filter-privilege">
+          <label for="filter-privilege">Блок преимуществ</label>
+        </li>
+        <li class="filter-features">
+          <input class="vissually-hidden filter-input filter-input-checkbox"
+            type="checkbox" name="news" id="filter-news" checked>
+          <label for="filter-news">Новости</label>
+        </li>
+        <li class="filter-features">
+          <input class="vissually-hidden filter-input filter-input-checkbox"
+            type="checkbox" name="gallery" id="filter-gallery">
+          <label for="filter-gallery">Галерея</label>
+        </li>
+        <li class="filter-features">
+          <input class="vissually-hidden filter-input filter-input-checkbox"
+            type="checkbox" name="basket" id="filter-basket">
+          <label for="filter-basket">Корзина</label>
+        </li>
+      </ul>
+      </fieldset>
+      <button type="submit" class="filter-button button">Показать</button>
+    </form>
     </section>
     <section class="catalog">
       <h2 class="visually-hidden">Список шаблонов</h2>
@@ -129,5 +164,24 @@
       </div>
     </div>
   </footer>
+  <section class="modal">
+    <h2>Напишите нам</h2>
+    <form class="text-us-form" action="https://echo.htmlacademy.ru" method="post">
+      <p>
+        <label for="name">Ваше имя:</label>
+        <input id="name" type="text" name="name" placeholder="Имя Фамилия">
+      </p>
+      <p>
+        <label for="e-mail">Ваш e-mail:</label>
+        <input id="e-mail" type="text" name="e-mail" placeholder="email@example.com">
+      </p>
+      <p>
+        <label for="message">Текст письма:</label>
+        <input id="message" type="text" name="message" placeholder="В свободной форме">
+      </p>
+      <button class="modal-send" type="submit">Отправить</button>
+    </form>
+      <button class="modal-close" type="button">Закрыть</button>
+  </section>
 </body>
 </html>
