--- a/index.html
+++ b/index.html
@@ -112,5 +112,24 @@
         </div>
       </div>
     </footer>
+    <section class="modal">
+      <h2>Напишите нам</h2>
+      <form class="text-us-form" action="https://echo.htmlacademy.ru" method="post">
+        <p>
+          <label for="name">Ваше имя:</label>
+          <input id="name" type="text" name="name" placeholder="Имя Фамилия">
+        </p>
+        <p>
+          <label for="e-mail">Ваш e-mail:</label>
+          <input id="e-mail" type="text" name="e-mail" placeholder="email@example.com">
+        </p>
+        <p>
+          <label for="message">Текст письма:</label>
+          <input id="message" type="text" name="message" placeholder="В свободной форме">
+        </p>
+        <button class="modal-send" type="submit">Отправить</button>
+      </form>
+        <button class="modal-close" type="button">Закрыть</button>
+    </section>
   </body>
 </html>
